# quick_agent_poc

./: README.md  main.py  pyproject.toml  start.sh
agent/: history_manager.py  llm_endpoint.py  stream.py
agent/schema/: chat.py  state.py
api/: main.py
api/core/: logger.py  singleton.py
api/routers/: chat.py  healthcheck.py
config/: settings.py
db/: __init__.py
db/connect/: connect_cosmosdb.py
frontend/: package-lock.json
frontend/app/agent/chat/: route.ts
frontend/app/api/chat/: route.ts
frontend/quick_agent_poc/app/: assistant.tsx
middleware/: cors.py
